--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,13 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Node.js
+node_modules/
+dist/
+.env
+
+# Docker
+*.log
+docker-compose.override.yml
+Dockerfile
