--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env
   db:
     image: postgres:latest
-    container_name: Franklin
+    container_name: postgres_db
     environment:
       POSTGRES_USER: Frank
       POSTGRES_PASSWORD: frankfrank
