--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,30 @@
-version: '3.8'
 services:
-  app:
-    build:
-      context: .
-    ports:
-      - "3000:3000"
-    depends_on:
-      - db
-    env_file:
-      - .env
   db:
-    image: postgres:latest
+    image: postgres:15
     container_name: postgres_db
     environment:
-      POSTGRES_USER: Frank
-      POSTGRES_PASSWORD: frankfrank
-      POSTGRES_DB: FrankEx
+      POSTGRES_USER: your_db_user
+      POSTGRES_PASSWORD: your_db_password
+      POSTGRES_DB: your_db_name
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
+  app:
+    build:
+      context: .
+    container_name: nestjs_app
+    ports:
+      - "3000:3000"
+    environment:
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: your_db_user
+      DB_PASS: your_db_password
+      DB_NAME: your_db_name
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
